<resources>
    <string name="app_name">Trivia project</string>
    <string name="trivia_login">Trivia Login</string>
    <string name="account_login">Account Login</string>
    <string name="register_account">Register Account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="accountinput">accountInput</string>
    <string name="no_accounts_found">No accounts found</string>
    <string name="start_game">Start Game</string>
    <string name="login">Login</string>
    <string name="sign_in_as_admin">sign in as admin</string>
    <string name="admin_options">admin options</string>
    <string name="preference_file_key">preferenceFileNameTrivia</string>
    <string name="preference_userId_key">preferenceUserIdKeyTrivia</string>
    <string name="admin">Admin</string>
    <string name="question">Question</string>
    <string name="user">User</string>
    <string name="go_back">Go Back</string>
    <string name="done">Done</string>
    <string name="admin_mode">Admin Mode</string>
    <string name="create_questions">Create Questions</string>
    <string name="delete_questions">delete questions</string>
    <string name="create_question">create question</string>
    <string name="Create_Question">Create Question</string>
    <string name="assign_answers">Assign Answers</string>
    <string name="enter_your_question">Enter your question</string>
    <string name="Create_Question_Confirm">create question</string>
    <string name="correct_answer_a_b_or_c">Correct answer (A, B or C)</string>
    <string name="prompt_for_a">prompt for A</string>
    <string name="prompt_for_b">prompt for B</string>
    <string name="prompt_for_c">prompt for C</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="create_question_actual">Create question</string>
    <string name="prompt_a">prompt A</string>
    <string name="prompt_b">prompt b</string>
    <string name="prompt_c">prompt c</string>
    <string name="enter_your_answer_a_b_or_c">Enter your answer (A, B or C)</string>
    <string name="prompt_B">prompt B</string>
    <string name="prompt_C">prompt C</string>
    <string name="question_prompt">question prompt</string>
    <string name="prompt_b_goes_here">prompt B goes here</string>
    <string name="prompt_a_goes_here">prompt a goes here</string>
    <string name="prompt_A_goes_here">prompt A goes here</string>
    <string name="prompt_c_goes_here">prompt C goes here</string>
    <string name="submit">submit</string>
    <string name="delete_c">Delete C</string>
    <string name="question_prompt_here">question prompt here</string>
    <string name="previous">previous</string>
    <string name="delete">delete</string>
    <string name="next">next</string>
    <string name="delete_b">Delete B</string>
    <string name="delete_a">Delete A</string>
    <string name="result">Result</string>
    <string name="play_again">Play Again</string>
    <string name="delete_user">Delete User</string>
    <string name="corrects">corrects</string>
    <string name="losses">losses</string>
    <string name="current_score">Current Score</string>
    <string name="total_score">Total Score</string>
</resources>