<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateQuestionActivity">

    <TextView
        android:id="@+id/create_questions"
        android:layout_width="264dp"
        android:layout_height="112dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/Create_Question"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editQuestion"
        android:layout_width="400dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_your_question"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_questions" />

    <EditText
        android:id="@+id/A"
        android:layout_width="365dp"
        android:layout_height="100dp"
        android:hint="@string/prompt_a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editQuestion" />

    <EditText
        android:id="@+id/B"
        android:layout_width="365dp"
        android:layout_height="100dp"
        android:hint="@string/prompt_B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/A" />

    <EditText
        android:id="@+id/C"
        android:layout_width="365dp"
        android:layout_height="100dp"
        android:hint="@string/prompt_C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/B" />

    <EditText
        android:id="@+id/correctQuestion"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:hint="@string/enter_your_answer_a_b_or_c"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/C" />

    <LinearLayout
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correctQuestion">

        <Button
            android:id="@+id/questionDoneButton"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:layout_weight="1" />

        <Button
            android:id="@+id/createQuestion"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_question_actual" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>