<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="16dp"
    android:paddingHorizontal="24dp"
    tools:context=".DeleteQuestionsActivity">

    <TextView
        android:id="@+id/question_prompt_delete"
        android:layout_width="264dp"
        android:layout_height="112dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text=""
        tools:text="@string/question_prompt_here"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/bDelete"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        tools:text="@string/delete_a"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_prompt_delete" />

    <EditText
        android:id="@+id/aDelete"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        tools:text="@string/delete_b"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bDelete" />

    <EditText
        android:id="@+id/cDelete"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        tools:text="@string/delete_c"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aDelete" />

    <LinearLayout
        android:id="@+id/deleteQuestionPrevNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cDelete">

        <Button
            android:id="@+id/Prev"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:paddingVertical="24dp"
            android:textSize="16sp"
            android:text="@string/previous"
            android:layout_weight="1" />

        <Button
            android:id="@+id/Next"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:paddingVertical="24dp"
            android:textSize="16sp"
            android:text="@string/next"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteQuestionPrevNext">

        <Button
            android:id="@+id/deleteQuestionDoneButton"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:paddingVertical="24dp"
            android:textSize="16sp"
            android:text="@string/done"
            android:layout_weight="1" />

        <Button
            android:id="@+id/Del"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:paddingVertical="24dp"
            android:textSize="16sp"
            android:text="@string/delete"
            android:layout_weight="1" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>