<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="16dp"
    android:paddingHorizontal="24dp"
    tools:context=".AdminActivity">

    <TextView
        android:id="@+id/adminTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:text="@string/admin"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/adminQuestionButton" />

    <Button
        android:id="@+id/adminQuestionButton"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:paddingVertical="24dp"
        android:textSize="16sp"
        android:layout_marginTop="72dp"
        android:text="@string/question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminTextView" />

    <Button
        android:id="@+id/adminUserButton"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:paddingVertical="24dp"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        android:text="@string/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminQuestionButton" />

    <Button
        android:id="@+id/adminGoBackButton"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:paddingVertical="24dp"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        android:text="@string/go_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminUserButton" />
</androidx.constraintlayout.widget.ConstraintLayout>