<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminOptionActivity">

    <Button
        android:id="@+id/create_questions"
        android:layout_width="255dp"
        android:layout_height="75dp"
        android:text="@string/create_questions"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_mode"
        app:layout_constraintVertical_bias="0.217" />

    <Button
        android:id="@+id/delete_questions"
        android:layout_width="255dp"
        android:layout_height="75dp"
        android:text="@string/delete_questions"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_mode" />

    <TextView
        android:id="@+id/admin_mode"
        android:layout_width="264dp"
        android:layout_height="112dp"
        android:layout_marginTop="148dp"
        android:gravity="center"
        android:text="@string/admin_mode"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>