<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="16dp"
    android:paddingHorizontal="24dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/login_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:gravity="center"
        android:text="@string/trivia_login"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mainLoginButton"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:paddingVertical="24dp"
        android:textSize="16sp"
        android:layout_marginTop="144dp"
        android:text="@string/account_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title_textview" />

    <Button
        android:id="@+id/mainRegisterButton"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:paddingVertical="24dp"
        android:textSize="16sp"
        android:layout_marginTop="48dp"
        android:text="@string/register_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainLoginButton" />
</androidx.constraintlayout.widget.ConstraintLayout>